--- a/APOD/APOD/Base.lproj/Main.storyboard
+++ b/APOD/APOD/Base.lproj/Main.storyboard
@@ -16,31 +16,81 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="VLl-S6-F1G">
-                                <rect key="frame" x="20" y="44" width="374" height="362"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xQB-tT-vXq">
-                                <rect key="frame" x="20" y="423" width="357" height="50"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" editable="NO" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="Wvt-V6-ii8">
-                                <rect key="frame" x="20" y="481" width="374" height="325"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                                <mutableString key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</mutableString>
-                                <color key="textColor" systemColor="labelColor"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
-                            </textView>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="56W-Qr-kMJ">
+                                <rect key="frame" x="0.0" y="24" width="414" height="836"/>
+                                <subviews>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="VLl-S6-F1G">
+                                        <rect key="frame" x="20" y="20" width="374" height="410"/>
+                                    </imageView>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xQB-tT-vXq">
+                                        <rect key="frame" x="20" y="447" width="43.5" height="63"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="63" id="uUf-8j-aVL"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" textAlignment="justified" translatesAutoresizingMaskIntoConstraints="NO" id="Wvt-V6-ii8">
+                                        <rect key="frame" x="20" y="518" width="374" height="298"/>
+                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" priority="750" constant="298" id="teV-mk-6Qz"/>
+                                        </constraints>
+                                        <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
+                                        <color key="textColor" systemColor="labelColor"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                    </textView>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6XE-iZ-We7">
+                                        <rect key="frame" x="315" y="399" width="56" height="31"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="31" id="ijO-aH-qa6"/>
+                                        </constraints>
+                                        <state key="normal" title="Button"/>
+                                        <buttonConfiguration key="configuration" style="plain" title="View"/>
+                                        <connections>
+                                            <segue destination="kNd-hX-DGa" kind="show" identifier="ShowFullImage" id="nmn-XT-7WV"/>
+                                        </connections>
+                                    </button>
+                                    <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" animating="YES" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="qsp-BW-q7q">
+                                        <rect key="frame" x="197" y="189" width="20" height="20"/>
+                                    </activityIndicatorView>
+                                </subviews>
+                                <viewLayoutGuide key="safeArea" id="dBl-hO-nmX"/>
+                                <constraints>
+                                    <constraint firstItem="qsp-BW-q7q" firstAttribute="top" secondItem="xmb-jk-mb5" secondAttribute="top" constant="189" id="1Lp-t4-1aC"/>
+                                    <constraint firstItem="6XE-iZ-We7" firstAttribute="bottom" secondItem="VLl-S6-F1G" secondAttribute="bottom" id="23a-Kv-LgN"/>
+                                    <constraint firstItem="Wvt-V6-ii8" firstAttribute="centerX" secondItem="56W-Qr-kMJ" secondAttribute="centerX" id="Bsm-4w-2NU"/>
+                                    <constraint firstAttribute="trailing" secondItem="6XE-iZ-We7" secondAttribute="trailing" constant="43" id="HJx-2T-N4w"/>
+                                    <constraint firstItem="Wvt-V6-ii8" firstAttribute="leading" secondItem="VLl-S6-F1G" secondAttribute="leading" id="L8Q-o7-gfO"/>
+                                    <constraint firstItem="Wvt-V6-ii8" firstAttribute="top" secondItem="xQB-tT-vXq" secondAttribute="bottom" constant="8" symbolic="YES" id="LM4-f3-dsm"/>
+                                    <constraint firstItem="Wvt-V6-ii8" firstAttribute="centerX" secondItem="qsp-BW-q7q" secondAttribute="centerX" id="N7w-F3-ubg"/>
+                                    <constraint firstItem="Wvt-V6-ii8" firstAttribute="leading" secondItem="xQB-tT-vXq" secondAttribute="leading" id="RbZ-0U-6uu"/>
+                                    <constraint firstAttribute="bottom" secondItem="Wvt-V6-ii8" secondAttribute="bottom" constant="20" id="RuZ-Kq-qNe"/>
+                                    <constraint firstItem="6XE-iZ-We7" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="xmb-jk-mb5" secondAttribute="leading" symbolic="YES" id="URF-Ix-rRy"/>
+                                    <constraint firstAttribute="trailing" secondItem="Wvt-V6-ii8" secondAttribute="trailing" constant="20" id="aMU-UH-AVU"/>
+                                    <constraint firstItem="VLl-S6-F1G" firstAttribute="top" secondItem="xmb-jk-mb5" secondAttribute="top" constant="20" id="kqf-VS-aZw"/>
+                                    <constraint firstItem="xQB-tT-vXq" firstAttribute="top" secondItem="VLl-S6-F1G" secondAttribute="bottom" constant="17" id="mUh-5w-ksk"/>
+                                    <constraint firstItem="Wvt-V6-ii8" firstAttribute="trailing" secondItem="VLl-S6-F1G" secondAttribute="trailing" id="nU3-SE-aDz"/>
+                                    <constraint firstItem="Wvt-V6-ii8" firstAttribute="leading" secondItem="xmb-jk-mb5" secondAttribute="leading" constant="20" id="pJY-dE-1F5"/>
+                                    <constraint firstItem="xmb-jk-mb5" firstAttribute="bottom" secondItem="Wvt-V6-ii8" secondAttribute="bottom" constant="20" id="wuj-F0-cdM"/>
+                                </constraints>
+                                <viewLayoutGuide key="contentLayoutGuide" id="uiR-1D-IWC"/>
+                                <viewLayoutGuide key="frameLayoutGuide" id="xmb-jk-mb5"/>
+                            </scrollView>
                         </subviews>
-                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="56W-Qr-kMJ" secondAttribute="trailing" id="4iV-ZX-BIh"/>
+                            <constraint firstItem="56W-Qr-kMJ" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="topMargin" constant="-20" id="Rn2-p4-C8z"/>
+                            <constraint firstItem="56W-Qr-kMJ" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="XQ7-cj-WE5"/>
+                            <constraint firstAttribute="bottomMargin" secondItem="56W-Qr-kMJ" secondAttribute="bottom" constant="2" id="qzE-uX-Zix"/>
+                        </constraints>
                     </view>
+                    <size key="freeformSize" width="414" height="896"/>
                     <connections>
+                        <outlet property="activityIndicator" destination="qsp-BW-q7q" id="n6t-kW-OoI"/>
                         <outlet property="explanationLabel" destination="Wvt-V6-ii8" id="l68-1u-fUg"/>
                         <outlet property="imageView" destination="VLl-S6-F1G" id="9T6-Kz-b5X"/>
                         <outlet property="titleLabel" destination="xQB-tT-vXq" id="WSh-XK-QuD"/>
@@ -49,6 +99,63 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="113.04347826086958" y="78.348214285714278"/>
+        </scene>
+        <!--Full Image View Controller-->
+        <scene sceneID="Ihn-7l-D63">
+            <objects>
+                <viewController id="kNd-hX-DGa" customClass="FullImageViewController" customModule="APOD" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Jfu-wq-QPN">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <subviews>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" maximumZoomScale="2" translatesAutoresizingMaskIntoConstraints="NO" id="N5G-XP-FaO">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="826"/>
+                                <subviews>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="4wK-t5-ul3">
+                                        <rect key="frame" x="0.0" y="0.0" width="414" height="826"/>
+                                    </imageView>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstAttribute="bottom" secondItem="4wK-t5-ul3" secondAttribute="bottom" id="3PV-Sn-DHf"/>
+                                    <constraint firstAttribute="trailing" secondItem="4wK-t5-ul3" secondAttribute="trailing" id="BOA-Jy-3Z0"/>
+                                    <constraint firstItem="4wK-t5-ul3" firstAttribute="top" secondItem="N5G-XP-FaO" secondAttribute="top" id="Lga-bk-wVx"/>
+                                    <constraint firstItem="4wK-t5-ul3" firstAttribute="centerX" secondItem="N5G-XP-FaO" secondAttribute="centerX" id="h75-5v-e1F"/>
+                                    <constraint firstItem="4wK-t5-ul3" firstAttribute="leading" secondItem="N5G-XP-FaO" secondAttribute="leading" id="rwG-oI-26D"/>
+                                    <constraint firstItem="4wK-t5-ul3" firstAttribute="bottom" secondItem="CCr-f6-mwL" secondAttribute="bottom" id="znA-ct-nJX"/>
+                                </constraints>
+                                <viewLayoutGuide key="contentLayoutGuide" id="keR-if-ySv"/>
+                                <viewLayoutGuide key="frameLayoutGuide" id="CCr-f6-mwL"/>
+                                <connections>
+                                    <outlet property="delegate" destination="kNd-hX-DGa" id="CXm-pu-HTN"/>
+                                </connections>
+                            </scrollView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="close" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eMn-gf-V6q">
+                                <rect key="frame" x="329" y="8" width="78" height="32"/>
+                                <buttonConfiguration key="configuration" style="plain" title="Close"/>
+                                <connections>
+                                    <segue destination="iM9-gC-cwY" kind="unwind" unwindAction="myUnwindActionWithUnwindSegue:" id="Jar-d2-0sj"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="N5G-XP-FaO" secondAttribute="trailing" id="5Vh-Fl-gly"/>
+                            <constraint firstItem="N5G-XP-FaO" firstAttribute="top" secondItem="Jfu-wq-QPN" secondAttribute="top" id="9Jk-Dn-Ijn"/>
+                            <constraint firstItem="eMn-gf-V6q" firstAttribute="top" secondItem="Jfu-wq-QPN" secondAttribute="top" constant="8" id="AUM-nW-12K"/>
+                            <constraint firstItem="N5G-XP-FaO" firstAttribute="leading" secondItem="Jfu-wq-QPN" secondAttribute="leading" id="NAx-sm-K5b"/>
+                            <constraint firstAttribute="trailing" secondItem="eMn-gf-V6q" secondAttribute="trailing" constant="7" id="oJy-io-Zdb"/>
+                            <constraint firstAttribute="bottom" secondItem="N5G-XP-FaO" secondAttribute="bottom" constant="70" id="wJy-Ff-m5x"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="z5I-WR-GW0"/>
+                    <connections>
+                        <outlet property="imageView" destination="4wK-t5-ul3" id="uFS-WM-rY9"/>
+                        <outlet property="scrollView" destination="N5G-XP-FaO" id="muk-Aj-IZw"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ZO9-Aq-2aZ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <exit id="iM9-gC-cwY" userLabel="Exit" sceneMemberID="exit"/>
+            </objects>
+            <point key="canvasLocation" x="919" y="79"/>
         </scene>
     </scenes>
     <resources>
