--- a/APOD/APOD/Base.lproj/Main.storyboard
+++ b/APOD/APOD/Base.lproj/Main.storyboard
@@ -42,13 +42,16 @@
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                                     </textView>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6XE-iZ-We7">
+                                    <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6XE-iZ-We7">
                                         <rect key="frame" x="315" y="399" width="56" height="31"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="31" id="ijO-aH-qa6"/>
                                         </constraints>
                                         <state key="normal" title="Button"/>
-                                        <buttonConfiguration key="configuration" style="plain" title="View"/>
+                                        <buttonConfiguration key="configuration" style="plain" title="View">
+                                            <color key="baseForegroundColor" systemColor="tintColor"/>
+                                        </buttonConfiguration>
                                         <connections>
                                             <segue destination="kNd-hX-DGa" kind="show" identifier="ShowFullImage" id="nmn-XT-7WV"/>
                                         </connections>
@@ -114,9 +117,12 @@
                     <size key="freeformSize" width="414" height="896"/>
                     <connections>
                         <outlet property="activityIndicator" destination="qsp-BW-q7q" id="n6t-kW-OoI"/>
+                        <outlet property="errorView" destination="iAG-ve-EJy" id="GTy-U1-U5U"/>
+                        <outlet property="errorViewHeightConstraint" destination="SOr-nO-h5B" id="TMu-tx-nXI"/>
                         <outlet property="explanationLabel" destination="Wvt-V6-ii8" id="l68-1u-fUg"/>
                         <outlet property="imageView" destination="VLl-S6-F1G" id="9T6-Kz-b5X"/>
                         <outlet property="titleLabel" destination="xQB-tT-vXq" id="WSh-XK-QuD"/>
+                        <outlet property="viewFullImageButton" destination="6XE-iZ-We7" id="qDS-jx-NrS"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
@@ -131,19 +137,19 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <subviews>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" maximumZoomScale="2" translatesAutoresizingMaskIntoConstraints="NO" id="N5G-XP-FaO">
-                                <rect key="frame" x="0.0" y="0.0" width="414" height="826"/>
+                                <rect key="frame" x="0.0" y="19" width="414" height="826"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="4wK-t5-ul3">
-                                        <rect key="frame" x="0.0" y="0.0" width="414" height="826"/>
+                                        <rect key="frame" x="0.0" y="55" width="414" height="710"/>
                                     </imageView>
                                 </subviews>
                                 <constraints>
-                                    <constraint firstAttribute="bottom" secondItem="4wK-t5-ul3" secondAttribute="bottom" id="3PV-Sn-DHf"/>
+                                    <constraint firstAttribute="bottom" secondItem="4wK-t5-ul3" secondAttribute="bottom" constant="61" id="3PV-Sn-DHf"/>
                                     <constraint firstAttribute="trailing" secondItem="4wK-t5-ul3" secondAttribute="trailing" id="BOA-Jy-3Z0"/>
-                                    <constraint firstItem="4wK-t5-ul3" firstAttribute="top" secondItem="N5G-XP-FaO" secondAttribute="top" id="Lga-bk-wVx"/>
+                                    <constraint firstItem="4wK-t5-ul3" firstAttribute="top" secondItem="N5G-XP-FaO" secondAttribute="top" constant="55" id="Lga-bk-wVx"/>
                                     <constraint firstItem="4wK-t5-ul3" firstAttribute="centerX" secondItem="N5G-XP-FaO" secondAttribute="centerX" id="h75-5v-e1F"/>
                                     <constraint firstItem="4wK-t5-ul3" firstAttribute="leading" secondItem="N5G-XP-FaO" secondAttribute="leading" id="rwG-oI-26D"/>
-                                    <constraint firstItem="4wK-t5-ul3" firstAttribute="bottom" secondItem="CCr-f6-mwL" secondAttribute="bottom" id="znA-ct-nJX"/>
+                                    <constraint firstItem="4wK-t5-ul3" firstAttribute="bottom" secondItem="CCr-f6-mwL" secondAttribute="bottom" constant="-61" id="znA-ct-nJX"/>
                                 </constraints>
                                 <viewLayoutGuide key="contentLayoutGuide" id="keR-if-ySv"/>
                                 <viewLayoutGuide key="frameLayoutGuide" id="CCr-f6-mwL"/>
@@ -153,6 +159,7 @@
                             </scrollView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="close" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eMn-gf-V6q">
                                 <rect key="frame" x="329" y="8" width="78" height="32"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <buttonConfiguration key="configuration" style="plain" title="Close"/>
                                 <connections>
                                     <segue destination="iM9-gC-cwY" kind="unwind" unwindAction="myUnwindActionWithUnwindSegue:" id="Jar-d2-0sj"/>
@@ -162,11 +169,11 @@
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstAttribute="trailing" secondItem="N5G-XP-FaO" secondAttribute="trailing" id="5Vh-Fl-gly"/>
-                            <constraint firstItem="N5G-XP-FaO" firstAttribute="top" secondItem="Jfu-wq-QPN" secondAttribute="top" id="9Jk-Dn-Ijn"/>
+                            <constraint firstItem="N5G-XP-FaO" firstAttribute="top" secondItem="Jfu-wq-QPN" secondAttribute="top" constant="19" id="9Jk-Dn-Ijn"/>
                             <constraint firstItem="eMn-gf-V6q" firstAttribute="top" secondItem="Jfu-wq-QPN" secondAttribute="top" constant="8" id="AUM-nW-12K"/>
                             <constraint firstItem="N5G-XP-FaO" firstAttribute="leading" secondItem="Jfu-wq-QPN" secondAttribute="leading" id="NAx-sm-K5b"/>
                             <constraint firstAttribute="trailing" secondItem="eMn-gf-V6q" secondAttribute="trailing" constant="7" id="oJy-io-Zdb"/>
-                            <constraint firstAttribute="bottom" secondItem="N5G-XP-FaO" secondAttribute="bottom" constant="70" id="wJy-Ff-m5x"/>
+                            <constraint firstAttribute="bottom" secondItem="N5G-XP-FaO" secondAttribute="bottom" constant="51" id="wJy-Ff-m5x"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="z5I-WR-GW0"/>
@@ -178,7 +185,7 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ZO9-Aq-2aZ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
                 <exit id="iM9-gC-cwY" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="919" y="79"/>
+            <point key="canvasLocation" x="918.84057971014499" y="78.348214285714278"/>
         </scene>
     </scenes>
     <resources>
@@ -190,6 +197,9 @@
         </systemColor>
         <systemColor name="systemRedColor">
             <color red="1" green="0.23137254901960785" blue="0.18823529411764706" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="tintColor">
+            <color red="0.0" green="0.47843137254901963" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
